# dsolver-simulator

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.broadcaster-service  Dockerfile.simulator-service  README.md  STRESS_TEST_README.md  docker-compose.redis.yml  docker-compose.state-history.yml  simulator-manifest.toml
.github/workflows/: ci.yml  deploy-broadcaster.yml  deploy.yml
crates/apps/: Cargo.toml
crates/apps/src/sim_analysis/: mod.rs  presets.rs  report.rs
crates/apps/tests/integration/: encode_route.rs  main.rs  protocol_reset_memory.rs  token_metadata_compat.rs
crates/broadcaster-replay-client/: Cargo.toml
crates/broadcaster-replay-client/src/: checkpoint.rs  client.rs  error.rs  handoff.rs  lib.rs  reader.rs  snapshot.rs  url.rs
crates/rpc/: Cargo.toml
crates/rpc/src/api/: broadcaster.rs  mod.rs
crates/rpc/src/handlers/: broadcaster.rs  encode.rs  readiness.rs
crates/rpc/src/models/: broadcaster_rpc.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: broadcaster_service.rs  lib.rs  metrics.rs  simulator_service.rs  stream.rs
crates/runtime/src/broadcaster/: app.rs  gas_price.rs  mod.rs  redis_publisher.rs  redis_subscription.rs  service.rs  state.rs
crates/runtime/src/broadcaster/redis_publisher/: config.rs  retry.rs  snapshot.rs  tests.rs  writer.rs
crates/runtime/src/broadcaster/redis_subscription/: checkpoint.rs  handoff.rs  live_vm_wire_e2e.rs  processor.rs  reader.rs  snapshot.rs  tests.rs
crates/runtime/src/config/: logging.rs  mod.rs
crates/runtime/src/models/: broadcaster.rs  broadcaster_urls.rs  mod.rs  state.rs  tokens.rs
crates/runtime/src/services/: broadcaster.rs  broadcaster_sessions.rs  broadcaster_subscription.rs  encode.rs  mod.rs  quote_service.rs  quotes.rs  rfq_tokens.rs  stream_builder.rs
crates/runtime/src/services/encode/: backend.rs  error.rs  fixtures.rs  resimulate.rs  response.rs
crates/simulator-core/: Cargo.toml
crates/simulator-core/src/: broadcaster.rs  lib.rs
crates/simulator-core/src/broadcaster/: redis_streams.rs
crates/simulator-core/src/models/: broadcaster.rs  factories.rs  messages.rs  protocol.rs
crates/state-history/: Cargo.toml
crates/state-history/migrations/: 20260701000100_create_state_history.sql
crates/state-history/src/: lib.rs
docs/: encode_example.md  quote_service.md  redis_streams_integration.md  simulate_example.md  state_history.md
scripts/: start_server.sh  stop_server.sh  test_start_server_redis.sh  test_verify_broadcaster_redis.sh  verify_broadcaster_redis.sh  verify_redis_promotion_handoff.sh  verify_state_history.sh  verify_state_history_postgres.sh
skills/simulation-service-analysis/: SKILL.md
skills/simulation-service-analysis/references/: encode.md  project.md  protocols.md
skills/tycho-cloudwatch-logs/: SKILL.md
skills/tycho-cloudwatch-logs/references/: queries.md
skills/tycho-cloudwatch-logs/scripts/: cw_env.zsh  cw_metrics.py  cw_metrics.zsh
src/: main.rs
src/services/: quotes.rs
src/sim_analysis/: mod.rs  presets.rs  report.rs
