[package]
name = "runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DSolver simulator runtime assembly, state, streams, and services."

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
csv.workspace = true
dotenv.workspace = true
futures.workspace = true
jemalloc-ctl.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true
rayon.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
state_history = { package = "state-history", path = "../state-history" }
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tycho-common.workspace = true
tycho-execution.workspace = true
tycho-simulation.workspace = true
broadcaster_replay_client = { package = "broadcaster-replay-client", path = "../broadcaster-replay-client" }
simulator_core = { package = "simulator-core", path = "../simulator-core" }

[dev-dependencies]
chrono.workspace = true
typetag.workspace = true

[lints]
workspace = true
