[package]
name = "simulator-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared DSolver simulator core types and protocol metadata."

[dependencies]
serde.workspace = true
serde_json.workspace = true
tycho-simulation.workspace = true

[dev-dependencies]
anyhow.workspace = true
chrono.workspace = true
num-bigint.workspace = true
typetag.workspace = true

[lints]
workspace = true
