[package]
name = "state-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Durable state history storage and restore helpers for DSolver simulator."

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
simulator_core = { package = "simulator-core", path = "../simulator-core" }
zstd.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
